<resources>
    <string name="app_name">Expense controller</string>
    <string name="text_tv_login">Login</string>
    <string name="text_bt_entrar">Enter</string>
    <string name="hint_et_usuario">User</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_contrasena">Password</string>
    <string name="toast_email">Email format: example@example.com</string>
    <string name="semanal">Semanal</string>
    <string name="mensual">Mensual</string>
    <string name="login_ya_tiene">"If you already have an account"</string>
    <string name="login_no_tiene">"If you do not have an account yet"</string>
    <string name="entrar">Login</string>
    <string name="registrar">Singn up</string>
    <string name="agregar_gastos">Add expenses</string>
    <string name="agregar_ingresos">Earnings</string>
    <string name="modificar_gastos">Modify expenses</string>
    <string name="estadisticas">Statistics</string>
    <string name="salir">Logout</string>
    <string name="cantidad">Amount</string>
    <string name="detalles">Details</string>
    <string name="añadir">Add</string>
    <string name="estadistica_gastos">Expenditure statistics</string>
    <string name="por_tipo">By type</string>
    <string name="por_periodo">By period</string>
    <string name="error_al_registrar_tipo">Error to register type</string>
    <string name="gasto_registrado">Expense registered</string>
    <string name="detalle">Details</string>
    <string name="monto">Amount</string>
    <string name="tipo">Type</string>
    <string name="guardar">Save</string>
    <string name="seleccione">Select...</string>
    <string name="seleccionar_tipo">You must select a type</string>
    <string name="completar_campos">You must complete all the fields</string>

    <string name="determine_los_ingresos_para_un_periodo_semanal_o_mensual">Determine los ingresos para un periodo semanal o mensual</string>
    <string-array name="idiomas">
        <item>"English"</item>
        <item>"Spanish"</item>
    </string-array>
    <string-array name="id_valores">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
